src/assets/styles/theme.css
:root {
  --blue:#96c5f5;
  --light-bg: #fff;
  --gray: #dfe6e9;
}

html {
  text-size-adjust: 100%;
  -webkit-tap-highlight-color: transparent;
  /*  for firefox */
  scrollbar-color: var(--blue) transparent;
  scrollbar-width: thin;
  overflow: overlay;
  scroll-behavior: unset;
  font-variant-numeric: tabular-nums;
  font-display: swap;
  font-size: 14px;
}

@media (max-width: 799px) {
  body {
    max-width: 100vw;
    overflow-x: hidden;
  }
}

body::-webkit-scrollbar {
  height: 0;
}

input{  
	background:none;  
	outline:none;  
	border:0px;
}

textarea{
	border:none;
	outline: none;
	resize: none;
	background:transparent;
}


::-webkit-scrollbar {
  width: 10px;
  height: 10px;
}

::-webkit-scrollbar-thumb,
::-webkit-scrollbar-thumb:hover {
  background-color: var(--gray);
  background-clip: padding-box;
  border: 3px solid transparent;
  border-radius: 5px;
}


::-webkit-scrollbar {
  width: 4px;
  height: 4px;
  background: var(--light-bg);
}

::-webkit-scrollbar-thumb {
  background: var(--blue);
}

::-webkit-scrollbar-thumb:hover {
  background: #74b9ff;
}

::-webkit-scrollbar-corner {
  background: var(--light-bg);
}

figure {
  width: 100%;
  text-align: center;
}

a {
  text-decoration: none;
}

@layer base {
  .theme-container {
    @apply bg-[#FAFAFA] bg-opacity-30 text-black transition-colors dark:bg-[#121212] dark:bg-opacity-70 dark:text-[#dee1e7];
  }
  .dark-bg {
    @apply dark:bg-[#282828]
  }
}

